Update foundation libs to cdnjs

--- a/themes/foundation/templates/layout/admin-parts/head.twig
+++ b/themes/foundation/templates/layout/admin-parts/head.twig
@@ -1,5 +1,5 @@
 {% include '@theme/layout/parts/head.twig' %}
-<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 
 <link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main-admin.scss&formatter=compact">
