General clean up of foundation theme.

--- a/themes/foundation/scss/_main.scss
+++ b/themes/foundation/scss/_main.scss
@@ -1,6 +1,14 @@
 //body {
 //  background-color: tomato;
 //}
+.card-section {
+  height: 150px !important;
+  text-align: center;
+    
+  img {
+    max-height: 100%;
+  }
+}
 
 .table {
   width: 100%;
