--- a/themes/foundation/templates/helper/tab-navigation.twig
+++ b/themes/foundation/templates/helper/tab-navigation.twig
@@ -1,4 +1,4 @@
-<ul class="menu">
+<ul class="menu" style="margin-bottom:20px;">
     {% for pill in navigation %}
         {% if pill.onlyWhenActive %}
             {% if currentUrl() == pill.url %}
