--- a/themes/foundation/templates/layout/parts/flash-messages.twig
+++ b/themes/foundation/templates/layout/parts/flash-messages.twig
@@ -3,70 +3,70 @@
 {# @var flashFormErrors \Symfony\Component\Validator\ConstraintViolationInterface[] #}
 
 {% if flashMessages is iterable or templateFlashMessages is iterable or flashFormErrors is iterable %}
-    <div id="messages">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    {% for type, messages in flashMessages %}
-                        {% if type == 'error' %}
-                            {% set type = 'danger' %}
-                        {% endif %}
-                        {% for message in messages %}
-                            <div class="alert alert-{{ type }}">
-                                <button type="button" class="close" data-dismiss="alert">&times;</button>
-
-                                {% if type == 'success' %}
-                                    <i class="fa fa-check-circle"></i>
-                                {% elseif type == 'info' %}
-                                    <i class="fa fa-info-circle"></i>
-                                {% elseif type == 'warning' %}
-                                    <i class="fa fa-exclamation-triangle"></i>
-                                {% elseif type == 'danger' %}
-                                    <i class="fa fa-exclamation-circle"></i>
-                                {% endif %}
-
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                    {% endfor %}
-
-                    {% for type, messages in templateFlashMessages %}
-                        {% if type == 'error' %}
-                            {% set type = 'danger' %}
-                        {% endif %}
-                        {% for message in messages %}
-                            <div class="alert alert-{{ type }}">
-                                <button type="button" class="close" data-dismiss="alert">&times;</button>
-
-                                {% if type == 'success' %}
-                                    <i class="fa fa-check-circle"></i>
-                                {% elseif type == 'info' %}
-                                    <i class="fa fa-info-circle"></i>
-                                {% elseif type == 'warning' %}
-                                    <i class="fa fa-exclamation-triangle"></i>
-                                {% elseif type == 'danger' %}
-                                    <i class="fa fa-exclamation-circle"></i>
-                                {% endif %}
-
-                                {% include message.flashTemplate with message.data %}
-                            </div>
-                        {% endfor %}
-                    {% endfor %}
-
-                    {% if flashFormErrors is iterable %}
-                        <div class="alert alert-danger">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <i class="fa fa-exclamation-circle pull-left"></i>
-
-                            <ul>
-                                {% for formError in flashFormErrors %}
-                                    <li>{{ formError.getPropertyPath() }} - {{ formError.getMessage() }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
+        {% for type, messages in flashMessages %}
+            {% if type == 'error' %}
+                {% set type = 'alert' %}
+            {% endif %}
+            {% for message in messages %}
+                <div class="callout {{ type }}" data-closable>
+                    {% if type == 'success' %}
+                        <i class="fa fa-check-circle"></i>
+                    {% elseif type == 'info' %}
+                        <i class="fa fa-info-circle"></i>
+                    {% elseif type == 'warning' %}
+                        <i class="fa fa-exclamation-triangle"></i>
+                    {% elseif type == 'danger' %}
+                        <i class="fa fa-exclamation-circle"></i>
                     {% endif %}
+
+                    {{ message }}
+
+                    <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
+            {% endfor %}
+        {% endfor %}
+
+        {% for type, messages in templateFlashMessages %}
+            {% if type == 'error' %}
+                {% set type = 'alert' %}
+            {% endif %}
+            {% for message in messages %}
+                <div class="callout {{ type }}" data-closable>
+
+                    {% if type == 'success' %}
+                        <i class="fa fa-check-circle"></i>
+                    {% elseif type == 'info' %}
+                        <i class="fa fa-info-circle"></i>
+                    {% elseif type == 'warning' %}
+                        <i class="fa fa-exclamation-triangle"></i>
+                    {% elseif type == 'danger' %}
+                        <i class="fa fa-exclamation-circle"></i>
+                    {% endif %}
+
+                    {% include message.flashTemplate with message.data %}
+
+                    <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        {% endfor %}
+
+        {% if flashFormErrors is iterable %}
+            <div class="callout alert" data-closable>
+                <i class="fa fa-exclamation-circle"></i>
+
+                <ul>
+                    {% for formError in flashFormErrors %}
+                        <li>{{ formError.getPropertyPath() }} - {{ formError.getMessage() }}</li>
+                    {% endfor %}
+                </ul>
+
+                <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-        </div>
-    </div>
+        {% endif %}
 {% endif %}
