--- a/themes/foundation/templates/admin/product/images.twig
+++ b/themes/foundation/templates/admin/product/images.twig
@@ -7,19 +7,16 @@
 
     {% include '@theme/admin/product/parts/header.twig' %}
 
-    <div class="row column">
+    <div class="row small-up-2 medium-up-3 large-up-4">
 
         {% for image in product.images %}
-            <div class="medium-4 columns">
-                <div class="thumbnail">
-                    <div class="text-center" style="height: 160px;">
-                        <img src="{{ imageUrl(image) }}" style="max-width: 100%; max-height: 100%;" />
+            <div class="column column-block">
+                <div class="card">
+                    <div class="card-section">
+                        <img src="{{ imageUrl(image) }}">
                     </div>
-                    <br />
-                    <p>
+                    <div class="card-section">
                         {% include '@theme/admin/product/parts/set-default-image.twig' %}
-
-                        <br>
                         <form action="{{ routeUrl('admin.product.remove-image') }}"
                                 method="post"
                                 class="form">
@@ -27,17 +24,18 @@
                             {{ form.hidden('productId', product.id.hex) }}
                             {{ form.hidden('imageId', image.id.hex) }}
 
-                            <button type="submit" class="button alert"><i class="fa fa-trash"></i> Remove</button>
-                        </form>
-                    </p>
+                            <button type="submit" class="button alert expanded">
+                                <i class="fa fa-trash"></i> Remove
+                            </button>
+                        </form>                    
+                    </div>
                 </div>
             </div>
         {% endfor %}
+    </div>
 
-        <div class="clearfix"></div>
-
-        <div class="well well-sm">
-            <div class="form-group">
+    <div class="row column">
+        <div class="callout">
                 <form action="{{ routeUrl('admin.product.upload-image') }}"
                         method="post"
                         class="form"
@@ -48,24 +46,26 @@
                     <input type="file" name="image">
                     <button type="submit" class="button"><i class="fa fa-upload"></i> Upload</button>
                 </form>
-            </div>
         </div>
+    </div>
 
-        <h3>Tag Images:</h3>
+    <h3>Tag Images:</h3>
+    <div class="row small-up-2 medium-up-3 large-up-4 xlarge-up-6">
 
         {% for image in product.tagImages %}
-            <div class="medium-4 columns">
-                <div class="thumbnail">
-                    <div class="text-center" style="height: 160px;">
-                        <img src="{{ imageUrl(image) }}" style="max-width: 100%; max-height: 100%;" />
+            <div class="column column-block">
+                <div class="card">
+                    <div class="card-section">
+                        <img src="{{ imageUrl(image) }}">
                     </div>
-                    <br />
-                    <p>
-                        {% include '@theme/admin/product/parts/set-default-image.twig' %}
-                    </p>
+                    <div class="card-section">
+                        {% include '@theme/admin/product/parts/set-default-image.twig' %}                  
+                    </div>
                 </div>
             </div>
         {% else %}
             No tag images
         {% endfor %}
+    </div>
+
 {% endblock %}
