--- a/themes/foundation/templates/admin/product/parts/set-default-image.twig
+++ b/themes/foundation/templates/admin/product/parts/set-default-image.twig
@@ -1,12 +1,10 @@
 {% if image.path == product.defaultImage %}
-    <div class="label label-primary">Default</div>
-
     <form action="{{ routeUrl('admin.product.unset-default-image') }}"
           method="post">
         {{ form.csrf() }}
         {{ form.hidden('productId', product.id.hex) }}
 
-        <button type="submit" class="button alert">
+        <button type="submit" class="button alert expanded">
             <i class="fa fa-minus-circle"></i> 
             Unset Default
         </button>
@@ -18,7 +16,7 @@
         {{ form.hidden('productId', product.id.hex) }}
         {{ form.hidden('imageId', image.id.hex) }}
 
-        <button type="submit" class="button">
+        <button type="submit" class="button expanded">
             Set Default
         </button>
     </form>
