--- a/themes/foundation/templates/admin/option/values.twig
+++ b/themes/foundation/templates/admin/option/values.twig
@@ -21,7 +21,7 @@
                             <td>
                                 <form action="{{ routeUrl('admin.option.delete-option-value') }}"
                                       method="post"
-                                      class="form">
+                                      class="form delete-option-value">
                                     {{ form.csrf() }}
                                     {{ form.hidden('optionId', option.id.hex) }}
                                     {{ form.hidden('optionValueId', optionValue.id.hex) }}
