Adding admin panel Attribute crud test.

--- a/themes/foundation/templates/admin/attribute/attribute-values.twig
+++ b/themes/foundation/templates/admin/attribute/attribute-values.twig
@@ -18,7 +18,7 @@
                     {% block tbody %}
                         <td class="text-right">
                             <a href="{{ routeUrl('admin.attribute.attribute-value.edit', {'attributeValueId': attributeValue.id.hex}) }}"
-                               class="button secondary">
+                               class="button secondary edit-attribute-value">
                                 Edit
                             </a>
                             <a href="{{ routeUrl('admin.attribute.attribute-value.product-attributes', {'attributeValueId': attributeValue.id.hex}) }}"
