--- a/themes/bootstrap/templates/admin/attribute/attribute-values.twig
+++ b/themes/bootstrap/templates/admin/attribute/attribute-values.twig
@@ -18,7 +18,7 @@
                     {% block tbody %}
                         <td class="text-right">
                             <a href="{{ routeUrl('admin.attribute.attribute-value.edit', {'attributeValueId': attributeValue.id.hex}) }}"
-                               class="btn btn-default btn-xs">
+                               class="btn btn-default btn-xs edit-attribute-value">
                                 Edit
                             </a>
                             <a href="{{ routeUrl('admin.attribute.attribute-value.product-attributes', {'attributeValueId': attributeValue.id.hex}) }}"
