--- a/themes/bootstrap/templates/admin/attribute/parts/attribute-intput-fields.twig
+++ b/themes/bootstrap/templates/admin/attribute/parts/attribute-intput-fields.twig
@@ -13,13 +13,13 @@
     </div>
 </div>
 <div class="row form-group">
-    <label for="attribute-{{ attribute.id.hex }}-choiceType" class="control-label col-sm-3">Choice Type</label>
+    <label for="attribute-choiceType" class="control-label col-sm-3">Choice Type</label>
     <div class="col-sm-3">
         {{ form.select(
             'attribute[choiceType]',
             attribute.choiceType.id,
             validAttributeChoiceTypeMap,
-            'coupon-type',
+            'attribute-choiceType',
             'form-control input-sm',
             {
                 'required': 'true'
