--- a/themes/foundation/templates/layout/parts/breadcrumbs.twig
+++ b/themes/foundation/templates/layout/parts/breadcrumbs.twig
@@ -1,24 +1,18 @@
 {% if breadcrumbs is defined %}
     {% set currentUrl = currentUrl() %}
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <ol class="breadcrumb">
-                    {% for name, url in breadcrumbs %}
-                        {% if currentUrl == url %}
-                            <li class="active">{{ name }}</li>
+        <div class="row column">
+            <ul class="breadcrumbs">
+                {% for name, url in breadcrumbs %}
+                    {% if currentUrl == url %}
+                        <li>{{ name }}</li>
+                    {% else %}
+                        {% if url is empty %}
+                            <li class="disabled">{{ name }}</li>
                         {% else %}
-                            {% if url is empty %}
-                                <li>{{ name }}</li>
-                            {% else %}
-                                <li>
-                                    <a href="{{ url }}">{{ name }}</a>
-                                </li>
-                            {% endif %}
+                            <li><a href="{{ url }}">{{ name }}</a></li>
                         {% endif %}
-                    {% endfor %}
-                </ol>
-            </div>
+                    {% endif %}
+                {% endfor %}
+            </ul>
         </div>
-    </div>
 {% endif %}
