--- a/themes/foundation/templates/layout/parts/footer-checkout.twig
+++ b/themes/foundation/templates/layout/parts/footer-checkout.twig
@@ -1,11 +1,7 @@
-<div id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12" id="checkout-footer">
-                <a href="{{ routeUrl('page.terms') }}">Terms of Use</a>
-                | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
-                {# TODO: <?=SITE_COPY?> #}
-            </div>
-        </div>
+<div class="row column">
+    <div id="checkout-footer">
+        <a href="{{ routeUrl('page.terms') }}">Terms of Use</a>
+        | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
+        {# @TODO: <?=SITE_COPY?> #}
     </div>
 </div>
