--- a/themes/foundation/templates/layout/parts/footer.twig
+++ b/themes/foundation/templates/layout/parts/footer.twig
@@ -1,16 +1,9 @@
-<div id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <a href="{{ routeUrl('page.terms') }}">Terms of Use</a>
-                | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
-                {# TODO: <?=SITE_COPY?> #}
-            </div>
-        </div>
-    </div>
-    {# TODO:
-        <?php if (Kommerce::isProfilingEnabled()) { ?>
-        <?=View::factory('profiler')?>
-        <?php } ?>
-    #}
+<div class="row column">
+    <a href="{{ routeUrl('page.terms') }}">Terms of Use</a> | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
+    {# TODO: <?=SITE_COPY?> #}
 </div>
+{# TODO:
+    <?php if (Kommerce::isProfilingEnabled()) { ?>
+    <?=View::factory('profiler')?>
+    <?php } ?>
+#}
