--- a/themes/foundation/templates/layout/parts/header-checkout.twig
+++ b/themes/foundation/templates/layout/parts/header-checkout.twig
@@ -1,38 +1,13 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ routeUrl('home') }}">{{ SITE_NAME | default('Kommerce') }} - Secure Checkout</a>
-        </div>
+<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+  <button class="menu-icon" type="button" data-toggle="example-menu"></button>
+  <div class="title-bar-title">Menu</div>
+</div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ routeUrl('user.login') }}">Sign In</a></li>
-                <li><a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div class="top-bar" id="zk-menu-checkout">
+  <div class="top-bar-right">
+    <ul class="menu">
+        <li><a href="{{ routeUrl('user.login') }}">Sign In</a></li>
+        <li><a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+    </ul>
+  </div>
+</div>
