--- a/themes/foundation/templates/layout/parts/header.twig
+++ b/themes/foundation/templates/layout/parts/header.twig
@@ -1,9 +1,9 @@
-<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-    <button class="menu-icon" type="button" data-toggle="example-menu"></button>
+<div class="title-bar" data-responsive-toggle="zk-menu" data-hide-for="medium">
+    <button class="menu-icon" type="button" data-toggle="zk-menu"></button>
     <div class="title-bar-title">Menu</div>
 </div>
 
-<div class="top-bar" id="example-menu">
+<div class="top-bar" id="zk-menu">
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text">
