--- a/themes/bootstrap/templates/admin/promotion/parts/date-time-timezeone-input.twig
+++ b/themes/bootstrap/templates/admin/promotion/parts/date-time-timezeone-input.twig
@@ -1,5 +1,5 @@
 <div class="row form-group">
-    <label class="control-label col-sm-3" for="{{ entityName }}-{{ entityAttribute }}Date">{{ label }}</label>
+    <label class="control-label col-sm-3" for="{{ entityName }}-{{ entityAttribute }}-date">{{ label }}</label>
     <div class="col-sm-3">
         <input type="text"
            id="{{ entityName }}-{{ entityAttribute }}-date"
