Adding admin store settings skeleton. https://github.com/inklabs/kommerce-core/issues/105

--- a/themes/bootstrap/templates/layout/admin-parts/header.twig
+++ b/themes/bootstrap/templates/layout/admin-parts/header.twig
@@ -48,6 +48,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ routeUrl('admin.settings.sales-tax') }}">Sales Tax Rules</a></li>
+                        <li><a href="{{ routeUrl('admin.settings.store') }}">Store Configuration</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
