--- a/themes/foundation/templates/layout/admin-parts/header.twig
+++ b/themes/foundation/templates/layout/admin-parts/header.twig
@@ -35,6 +35,7 @@
                 <a href="#">Settings</a>
                 <ul class="menu vertical">
                     <li><a href="{{ routeUrl('admin.settings.sales-tax') }}">Sales Tax Rules</a></li>
+                    <li><a href="{{ routeUrl('admin.settings.store') }}">Store Configuration</a></li>
                 </ul>
             </li>
             <li>
