Cleaning up configuration ui. https://github.com/inklabs/kommerce-core/issues/105

--- a/themes/bootstrap/templates/admin/settings/store/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/settings/store/parts/navigation.twig
@@ -1,6 +1,6 @@
 {% set navigation = [
     {
-        'name': 'View',
+        'name': 'Store',
         'url' : routeUrl('admin.settings.store')
     },
     {
