--- a/themes/bootstrap/templates/admin/settings/store/index.twig
+++ b/themes/bootstrap/templates/admin/settings/store/index.twig
@@ -8,6 +8,10 @@
 
         <div class="row">
             <div class="col-sm-12">
+                <h3>Theme</h3>
+                {% include '@theme/admin/settings/store/parts/configuration-input-form.twig' with {
+                    'configurations': configurations
+                } %}
             </div>
         </div>
     </div>
