--- a/themes/bootstrap/templates/admin/settings/store/parts/actions.twig
+++ b/themes/bootstrap/templates/admin/settings/store/parts/actions.twig
@@ -1,5 +1,5 @@
 <div class="row">
     <div class="col-sm-12">
-        <h1>Store Configuration</h1>
+        <h1>Configuration</h1>
     </div>
 </div>
