--- a/themes/bootstrap/templates/admin/settings/store/parts/configuration-input-form.twig
+++ b/themes/bootstrap/templates/admin/settings/store/parts/configuration-input-form.twig
@@ -1,44 +1,33 @@
-{# @var name string #}
-{# @var key string #}
-{# @var configuration array #}
+{# @var configurations array #}
 
 <form action="{{ routeUrl('admin.settings.store.post') }}"
       method="post"
       class="form-horizontal"
       role="form">
     {{ form.csrf() }}
-    {{ form.hidden('key', key) }}
-
     <div class="well">
-        <div class="row form-group">
-            <label for="value" class="control-label col-sm-3">{{ name }}</label>
-            <div class="col-sm-8">
-                <input type="text"
-                       id="value"
-                       name="value"
-                       value="{{ configuration.value }}"
-                       class="form-control col-sm-3"
-                       maxlength="255"
-                       required=""/>
+        {% for configuration in configurations %}
+            {{ form.hidden('configuration[' ~ configuration.key ~'][key]', configuration.key) }}
+            <div class="row form-group">
+                <label for="configuration-{{ configuration.key }}-value" class="control-label col-sm-3">{{ configuration.name }}</label>
+                <div class="col-sm-5">
+                    <input type="text"
+                           id="configuration-{{ configuration.key }}-value"
+                           name="configuration[{{ configuration.key }}][value]"
+                           value="{{ configuration.value }}"
+                           class="form-control col-sm-3"
+                           maxlength="255"
+                           required=""/>
+                </div>
+                <div class="col-sm-4 text-muted text-right small">
+                    <span title="Created">{{ configuration.created|formatDate }}</span><br>
+                    <span title="Updated">{{ configuration.updated|formatDate }}</span><br>
+                </div>
             </div>
-        </div>
-
-        <div class="row form-group">
-            <label for="{{ key }}-isActive" class="control-label col-sm-3">Is Active</label>
-            {{ form.checkbox(
-                key ~ '[isActive]',
-                configuration.isActive,
-                key ~ '-isActive'
-            ) }}
-        </div>
+        {% endfor %}
     </div>
 
     <div class="well">
-        <div class="pull-right text-muted text-right">
-            <span title="Created">{{ configuration.created|formatDate }}</span><br>
-            <span title="Updated">{{ configuration.updated|formatDate }}</span><br>
-        </div>
-
         <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
             <i class="fa fa-check-circle"></i> Save
         </button>
