--- a/themes/bootstrap/templates/admin/settings/store/payments.twig
+++ b/themes/bootstrap/templates/admin/settings/store/payments.twig
@@ -10,9 +10,7 @@
             <div class="col-sm-12">
                 <h3>Stripe</h3>
                 {% include '@theme/admin/settings/store/parts/configuration-input-form.twig' with {
-                    'name': 'Stripe API Key',
-                    'key': 'stripeApiKey',
-                    'configuration': configuration.stripeApiKey
+                    'configurations': configurations
                 } %}
             </div>
         </div>
