--- a/themes/bootstrap/templates/admin/settings/store/shipping.twig
+++ b/themes/bootstrap/templates/admin/settings/store/shipping.twig
@@ -1,3 +1,5 @@
+{# @var configurations array #}
+
 {% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}Shipping Configuration{% endblock %}
@@ -10,10 +12,7 @@
             <div class="col-sm-12">
                 <h3>EasyPost</h3>
                 {% include '@theme/admin/settings/store/parts/configuration-input-form.twig' with {
-                    'action': routeUrl('admin.settings.store.shipping.post'),
-                    'name': 'EasyPost API Key',
-                    'key': 'easypostApiKey',
-                    'configuration': configuration.easypostApiKey
+                    'configurations': configurations
                 } %}
             </div>
         </div>
