--- a/themes/foundation/scss/_main.scss
+++ b/themes/foundation/scss/_main.scss
@@ -1,6 +1,8 @@
 @import "settings";
 @import "vendor/foundation-sites";
 
+@include foundation-everything;
+
 body {
   background-color: $dark-gray;
 }
