Adding npm build for foundation theme.

--- a/themes/foundation/templates/admin/product/edit.twig
+++ b/themes/foundation/templates/admin/product/edit.twig
@@ -7,7 +7,7 @@
 
         {% include '@theme/admin/product/parts/header.twig' %}
 
-        <div class="row column">
+        <div class="zk-edit-product">
                 <form action="{{ routeUrl('admin.product.edit.post') }}"
                       method="post"
                       role="form">
