--- a/themes/foundation/templates/layout/admin-parts/head.twig
+++ b/themes/foundation/templates/layout/admin-parts/head.twig
@@ -1,3 +1,2 @@
 {% include '@theme/layout/parts/head.twig' %}
-<link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main-admin.scss&formatter=compact">
-
+<script src="{{ assetUrl('foundation', 'app.bundle.js') }}"></script>
