--- a/themes/foundation/templates/layout/parts/head.twig
+++ b/themes/foundation/templates/layout/parts/head.twig
@@ -10,5 +10,6 @@
     <link rel="canonical" href="{{ pageCanonicalUrl }}" />
 {% endif %}
 
-<link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main.scss&formatter=compact">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+
+<script src="{{ assetUrl('foundation', 'app.bundle.js') }}"></script>
