--- a/themes/foundation/store/templates/layout/parts/javascript.twig
+++ b/themes/foundation/store/templates/layout/parts/javascript.twig
@@ -2,6 +2,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.js"></script>
 
+<script src="{{ assetUrl('foundation', 'store', 'js/app.js') }}"></script>
+
 <script>
     $(document).foundation();
 </script>
